5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4187/executions/1807_2564.log
== TEST (2019-06-05 21:39:10) 
-- CODE:
 from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
golsAdv = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

if(size(gols) == size(golsAdv)):
	i = 0
	vitorias = 0 
	empates = 0
	derrotas = 0
	while(i < size(gols)):
		if(gols[i] > golsAdv[i] ):
			vitorias = vitorias + 1
		elif(gols[i] == golsAdv[i] ):
			empates = empates + 1
		elif(gols[i] < golsAdv[i]):
			derrotas = derrotas + 1
	resultado[0] = vitorias
	resultado[1] = empates
	resultado[2] = derrotas
	print(resultado)
-- ERROR:
File "XXXX", line 1
    from numpy import*
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:39:55) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
golsAdv = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

if(size(gols) == size(golsAdv)):
	i = 0
	vitorias = 0 
	empates = 0
	derrotas = 0
	while(i < size(gols)):
		if(gols[i] > golsAdv[i] ):
			vitorias = vitorias + 1
		elif(gols[i] == golsAdv[i] ):
			empates = empates + 1
		elif(gols[i] < golsAdv[i]):
			derrotas = derrotas + 1
	resultado[0] = vitorias
	resultado[1] = empates
	resultado[2] = derrotas
	print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:40:54) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
golsAdv = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

if(size(gols) == size(golsAdv)):
	i = 0
	vitorias = 0 
	empates = 0
	derrotas = 0
	while(i < size(gols)):
		if(gols[i] > golsAdv[i] ):
			vitorias = vitorias + 1
		elif(gols[i] == golsAdv[i] ):
			empates = empates + 1
		elif(gols[i] < golsAdv[i]):
			derrotas = derrotas + 1
	resultado[0] = vitorias
	resultado[1] = empates
	resultado[2] = derrotas
print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:46:01) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
golsAdv = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

if(size(gols) == size(golsAdv)):
	vitorias = 0 
	empates = 0
	derrotas = 0
	for (elemeto in gols) > (elemento in golsAdv):
		vitorias = vitorias + 1
print(vitorias)
-- ERROR:
File "XXXX", line 11
    for (elemeto in gols) > (elemento in golsAdv):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:46:21) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
golsAdv = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

if(size(gols) == size(golsAdv)):
	vitorias = 0 
	empates = 0
	derrotas = 0
	for (elemeto in gols) > (elemento in golsAdv):
		vitorias = vitorias + 1
print(vitorias)
-- ERROR:
File "XXXX", line 11
    for (elemeto in gols) > (elemento in golsAdv):
                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:46:45) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
golsAdv = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

if(size(gols) == size(golsAdv)):
	vitorias = 0 
	empates = 0
	derrotas = 0
	for elemeto in gols > elemento in golsAdv:
		vitorias = vitorias + 1
print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:48:41) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
golsAdv = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

if(size(gols) == size(golsAdv)):
	vitorias = 0 
	empates = 0
	derrotas = 0
	for elemento in gols > elemento in golsAdv:
		vitorias = vitorias + 1
print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:49:55) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
golsAdv = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

if(size(gols) == size(golsAdv)):
	vitorias = 0 
	empates = 0
	derrotas = 0
	for i in gols > i in golsAdv:
		vitorias = vitorias + 1
print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-05 21:51:03) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
golsAdv = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

if(size(gols) == size(golsAdv)):
	i = 0
	vitorias = 0 
	empates = 0
	derrotas = 0
	while(i < size(gols)):
		if(gols[i] > golsAdv[i] ):
			vitorias = vitorias + 1
		elif(gols[i] == golsAdv[i] ):
			empates = empates + 1
		elif(gols[i] < golsAdv[i]):
			derrotas = derrotas + 1
	resultado[0] = vitorias
	resultado[1] = empates
	resultado[2] = derrotas
print(resultado)
-- EXECUTION TIME:
517.14
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:51:59) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
golsAdv = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

if(size(gols) == size(golsAdv)):
	vitorias = 0 
	empates = 0
	derrotas = 0
	for gols[i] in gols > golsAdv[i] in golsAdv:
		vitorias = vitorias + 1
print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:52:02) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
golsAdv = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

if(size(gols) == size(golsAdv)):
	vitorias = 0 
	empates = 0
	derrotas = 0
	for gols[i] in gols > golsAdv[i] in golsAdv:
		vitorias = vitorias + 1
print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:56:46) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
golsAdv = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

while(size(gols) == size(golsAdv)):
	vitorias = 0 
	empates = 0
	derrotas = 0
	for elemento in gol and elemento in golsAdv:
		if(elemento > elento )
		vitorias = vitorias + 1
print(vitorias)
-- ERROR:
File "XXXX", line 12
    if(elemento > elento )
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-05 21:57:11) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
golsAdv = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

while(size(gols) == size(golsAdv)):
	vitorias = 0 
	empates = 0
	derrotas = 0
	for elemento in gol and elemento in golsAdv:
		if(elemento > elento ):
			vitorias = vitorias + 1
print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:12:53) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

while(size(gols) == size(gols2)):
	vitorias = 0 
	empates = 0
	derrotas = 0
	for elemento in gol and elemento in gols2:
		if(elemento > elemento in gols2 ):
			vitorias = vitorias + 1
print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:13:22) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

while(size(gols) == size(gols2)):
	vitorias = 0 
	empates = 0
	derrotas = 0
	for elemento in gols and elemento in gols2:
		if(elemento > elemento in gols2 ):
			vitorias = vitorias + 1
print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:14:10) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

while(size(gols) == size(gols2)):
	vitorias = 0 
	empates = 0
	derrotas = 0
	for elemento in gols and elemento in gols2:
		if(elemento > elemento in gols2 ):
			vitorias = vitorias + 1
print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:18:36) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

if(size(gols) == size(gols2)):
	while(elemento < (size(gols)-1)):
		vitorias = 0 
		empates = 0
		derrotas = 0
		for elemento in gols and elemento in gols2:
			if(elemento > elemento in gols2 ):
				vitorias = vitorias + 1
print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:19:39) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

if(size(gols) == size(gols2)):
	while(i < (size(gols)-1)):
		vitorias = 0 
		empates = 0
		derrotas = 0
		for elemento in gols and elemento in gols2:
			if(elemento > elemento in gols2 ):
				vitorias = vitorias + 1
print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:20:16) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)
i = 0
if(size(gols) == size(gols2)):
	while(i < (size(gols)-1)):
		vitorias = 0 
		empates = 0
		derrotas = 0
		for elemento in gols and elemento in gols2:
			if(elemento > elemento in gols2 ):
				vitorias = vitorias + 1
		i = i + 1
print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:20:58) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)
i = 0
if(size(gols) == size(gols2)):
	while(i < (size(gols)-1)):
		vitorias = 0 
		empates = 0
		derrotas = 0
		for elemento in gols:
			if(elemento > elemento in gols2 ):
				vitorias = vitorias + 1
		i = i + 1
print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:29:29) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

if(size(gols) == size(gols2)):
	while(elemento < (size(gols)-1))
	vitorias = 0 
	empates = 0
	derrotas = 0
	for elemento in gols and elemento in gols2:
		if(elemento > elemento in gols2 ):
			vitorias = vitorias + 1
print(vitorias)
-- ERROR:
File "XXXX", line 8
    while(elemento < (size(gols)-1))
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:30:46) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)
i = 0
if(size(gols) == size(gols2)):
	while(i < (size(gols)-1)):
		vitorias = 0 
		empates = 0
		derrotas = 0
		for elemento in gols and elemento in gols2:
			if(elemento > elemento in gols2 ):
				vitorias = vitorias + 1
				
print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:30:59) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)
i = 0
if(size(gols) == size(gols2)):
	while(i < (size(gols)-1)):
		vitorias = 0 
		empates = 0
		derrotas = 0
		for elemento in gols and elemento in gols2:
			if(elemento > elemento in gols2 ):
				vitorias = vitorias + 1
				
print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:31:43) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)
i = 0
if(size(gols) == size(gols2)):
	while(i < (size(gols)-2)):
		vitorias = 0 
		empates = 0
		derrotas = 0
		for elemento in gols and elemento in gols2:
			if(elemento > elemento in gols2 ):
				vitorias = vitorias + 1
				
print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:32:37) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)
i = 0
if(size(gols) == size(gols2)):
	while(i < size(gols)):
		vitorias = 0 
		empates = 0
		derrotas = 0
		for elemento in gols and elemento - 2 in gols2:
			if(elemento > elemento in gols2 ):
				vitorias = vitorias + 1
				
print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:32:56) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)
i = 0
if(size(gols) == size(gols2)):
	while(i < size(gols)):
		vitorias = 0 
		empates = 0
		derrotas = 0
		for elemento in gols and (elemento - 2) in gols2:
			if(elemento > elemento in gols2 ):
				vitorias = vitorias + 1
				
print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:34:23) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)
i = 0
if(size(gols) == size(gols2)):
	while(i < size(gols)):
		vitorias = 0 
		empates = 0
		derrotas = 0
		for elemento in gols and elemento in gols2:
			if(elemento > elemento in gols2 ):
				vitorias = vitorias + 1
				
print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:35:35) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)
i = 0
if(size(gols) == size(gols2)):
	while(i < size(gols)):
		vitorias = 0 
		empates = 0
		derrotas = 0
		for elemento in gols and elemento_1 in gols2:
			if(elemento > elemento_1):
				vitorias = vitorias + 1
				
print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:39:07) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)
i = 0
if(size(gols) == size(gols2)):
	while(i < size(gols)):
		vitorias = 0 
		empates = 0
		derrotas = 0
		elemento_1 = 0
	
		for elemento in gols:
			if(elemento > gols2[elemento_1]):
				vitorias = vitorias + 1
		elemento_1 = elemento_1 + 1 
				
print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:39:19) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)
i = 0
if(size(gols) == size(gols2)):
	while(i < size(gols)):
		vitorias = 0 
		empates = 0
		derrotas = 0
		elemento_1 = 0
	
		for elemento in gols:
			if(elemento > gols2[elemento_1]):
				vitorias = vitorias + 1
		elemento_1 = elemento_1 + 1 
				
	print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:39:33) 
-- CODE:
from numpy import*
	
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)
i = 0
if(size(gols) == size(gols2)):
	while(i < size(gols)):
		vitorias = 0 
		empates = 0
		derrotas = 0
		elemento_1 = 0
	
		for elemento in gols:
			if(elemento > gols2[elemento_1]):
				vitorias = vitorias + 1
		elemento_1 = elemento_1 + 1 
				
		print(vitorias)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:56:28) 
-- CODE:
from numpy import*
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

for i in range(resultado):
	if(gols[i] > gols2[i]):
		resultado[0] = resultado[0] + 1
	elif(gols[i] == gols2[i]):
		resultado[1] = resultado[1] + 1
	else: 
		resultado[2] = resultado[2] + 1
		
	print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:56:33) 
-- CODE:
from numpy import*
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

for i in range(resultado):
	if(gols[i] > gols2[i]):
		resultado[0] = resultado[0] + 1
	elif(gols[i] == gols2[i]):
		resultado[1] = resultado[1] + 1
	else: 
		resultado[2] = resultado[2] + 1
		
	print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:56:34) 
-- CODE:
from numpy import*
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

for i in range(resultado):
	if(gols[i] > gols2[i]):
		resultado[0] = resultado[0] + 1
	elif(gols[i] == gols2[i]):
		resultado[1] = resultado[1] + 1
	else: 
		resultado[2] = resultado[2] + 1
		
	print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:57:04) 
-- CODE:
from numpy import*
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

for i in range(resultado):
	if(gols[i] > gols2[i]):
		resultado[0] = resultado[0] + 1
	elif(gols[i] == gols2[i]):
		resultado[1] = resultado[1] + 1
	else: 
		resultado[2] = resultado[2] + 1
		
	print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:57:56) 
-- CODE:
from numpy import*
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

for i in range(resultado):
	if(gols[i] > gols2[i]):
		resultado[0] = resultado[0] + 1
	elif(gols[i] == gols2[i]):
		resultado[1] = resultado[1] + 1
	else: 
		resultado[2] = resultado[2] + 1
		
	print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:59:10) 
-- CODE:
from numpy import*
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

for i in range(resultado):
	if(gols[i] > gols2[i]):
		resultado[0] = resultado[0] + 1
	elif(gols[i] == gols2[i]):
		resultado[1] = resultado[1] + 1
	elif(gols[i] < gols2[i]): 
		resultado[2] = resultado[2] + 1
		
	print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 16:59:38) 
-- CODE:
from numpy import*
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

for i in range(resultado):
	if(gols[i] > gols2[i]):
		resultado[0] = resultado[0] + 1
	elif(gols[i] == gols2[i]):
		resultado[1] = resultado[1] + 1
	elif(gols[i] < gols2[i]): 
		resultado[2] = resultado[2] + 1
		
print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:00:40) 
-- CODE:
from numpy import*
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

for i in range(0,size(gols)):
	if(gols[i] > gols2[i]):
		resultado[0] = resultado[0] + 1
	elif(gols[i] == gols2[i]):
		resultado[1] = resultado[1] + 1
	elif(gols[i] < gols2[i]): 
		resultado[2] = resultado[2] + 1
		
print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 17:01:17) 
-- CODE:
from numpy import*
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

for i in range(0,size(gols)):
	if(gols[i] > gols2[i]):
		resultado[0] = resultado[0] + 1
	elif(gols[i] == gols2[i]):
		resultado[1] = resultado[1] + 1
	elif(gols[i] < gols2[i]): 
		resultado[2] = resultado[2] + 1
		
print(resultado)
-- EXECUTION TIME:
1.10164
-- TEST CASE 1:
---- input:
[2,3,2,4,3,5,3,4,2,3,1,0]
[3,3,1,0,2,3,3,0,1,2,1,1]
---- correct output:
[7 3 2]
---- user output:
[7 3 2]
-- TEST CASE 2:
---- input:
[1,2,1,2,1,2,1,2,0]
[3,5,3,3,3,3,3,3,3]
---- correct output:
[0 0 9]
---- user output:
[0 0 9]
-- TEST CASE 3:
---- input:
[1,2,2,2,2,1,1,2,2,1,1,2,2]
[0,1,1,1,0,0,0,0,0,0,1,1,1]
---- correct output:
[12 1 0]
---- user output:
[12  1  0]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 17:03:33) 
-- CODE:
from numpy import*
gols = array(eval(input("numero de gols efetuados por esse time em cada partida:")))
gols2 = array(eval(input("numero de gols efetuados pelo adversario:")))
resultado = zeros(3, dtype=int)

for i in range(0,size(gols)):
	if(gols[i] > gols2[i]):
		resultado[0] = resultado[0] + 1
	elif(gols[i] == gols2[i]):
		resultado[1] = resultado[1] + 1
	elif(gols[i] < gols2[i]): 
		resultado[2] = resultado[2] + 1
		
print(resultado)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
